--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: chatLLM
 Type: Package
 Title: A Flexible Interface for 'LLM' API Interactions
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: person(given = "Kwadwo Daddy Nyame",
                   family = "Owusu Boakye",
                   email = "kwadwo.owusuboakye@outlook.com",
                   role = c("aut", "cre"))
 Maintainer: Kwadwo Daddy Nyame Owusu Boakye <kwadwo.owusuboakye@outlook.com>
 Description: Provides a flexible interface for interacting with Large Language Model ('LLM') 
-    providers including 'OpenAI', 'Groq', 'Anthropic', 'DeepSeek', 'DashScope',
+    providers including 'OpenAI', 'Groq', 'Anthropic', 'DeepSeek', 'DashScope', 'Gemini', 'Grok' 
     and 'GitHub Models'. Supports both synchronous and asynchronous chat-completion APIs, with
     features such as retry logic, dynamic model selection, customizable parameters, and
     multi-message conversation handling. Designed to streamline integration with
